--- a/templates/bootstrap_5/grid/column_header_sort.html.twig
+++ b/templates/bootstrap_5/grid/column_header_sort.html.twig
@@ -1,5 +1,5 @@
-{% set linkClass = attributes.html_classes.theadLink|default('link-secondary') %}
-{% set linkClassActive = attributes.html_classes.theadLinkActive|default('link-primary') %}
+{% set linkClass = attributes.html_class.thead_link|default('link-secondary') %}
+{% set linkClassActive = attributes.html_class.thead_link_active|default('link-primary') %}
 
 {% if (attribute(request.order ?? {}, field.name) is not defined) or attribute(request.order, field.name) is same as null %}
     <a class="{{ linkClass }}"
