--- a/templates/bootstrap_5/grid/column_value_massaction.html.twig
+++ b/templates/bootstrap_5/grid/column_value_massaction.html.twig
@@ -1,5 +1,5 @@
 {% if view.massActionFormView %}
-    <td class="{{ field.attributes.column_value_class|default('align-middle text-center') }}">
+    <td class="{{ attributes.html_class.mass_action_column|default('align-middle text-center') }}">
         <label class="w-100">
             <input type="checkbox"
                    autocomplete="off"
