--- a/templates/bootstrap_5/action/view.html.twig
+++ b/templates/bootstrap_5/action/view.html.twig
@@ -10,8 +10,8 @@
         {% endblock %}
 
         {% block autogrid_view_header %}
-            {% set btnClass = attributes.html_classes.theadBtn|default('btn-outline-secondary') %}
-            <thead class="{{ attributes.html_classes.thead|default('') }}">
+            {% set btnClass = attributes.html_class.thead_btn|default('btn-outline-secondary') %}
+            <thead class="{{ attributes.html_class.thead|default('') }}">
             <tr>
                 <td class="text-nowrap h4 align-middle ps-0 pe-0" colspan="2">
                     <div class="container-fluid">
@@ -31,13 +31,13 @@
                             </span>
                             </div>
                             <div class="col col-4 text-end">
-                                {% if agRun(agIsAllowed, 'edit') and attributes.edit_button_in.view %}
+                                {% if agRun(agIsAllowed, 'edit') and attributes.button.edit.display_in_view %}
                                     <a class="btn btn-sm btn-outline-secondary" href="{{ agRun(agActionUrl, 'edit') }}">
                                         <i class="bi bi-pencil-square"></i>
                                         {{ 'f0ska.autogrid.button.modify'|trans }}
                                     </a>
                                 {% endif %}
-                                {% if agRun(agIsAllowed, 'delete') and attributes.delete_button_in.grid %}
+                                {% if agRun(agIsAllowed, 'delete') and attributes.button.delete.display_in_grid %}
                                     <a class="btn btn-sm btn-outline-danger"
                                        href="{{ agRun(agActionUrl, 'delete', {'id': entity.id}) }}"
                                        onclick="return confirm('{{ 'f0ska.autogrid.dialog.delete_confirm'|trans }}');"
@@ -55,13 +55,13 @@
         {% endblock %}
 
         {% block autogrid_view_footer %}
-            <tfoot class="{{ attributes.html_classes.tfoot|default('table-group-divider') }}">
+            <tfoot class="{{ attributes.html_class.tfoot|default('table-group-divider') }}">
             <tr>
                 <td colspan="2" class="ps-0 pe-0">
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col text-end">
-                                <a class="btn btn-sm {{ attributes.html_classes.tfootBtn|default('btn-outline-secondary') }}"
+                                <a class="btn btn-sm {{ attributes.html_class.tfoot_btn|default('btn-outline-secondary') }}"
                                    href="#{{ attributes.container_id }}"
                                 ><i class="bi bi-chevron-up"></i></a>
                             </div>
@@ -73,7 +73,7 @@
         {% endblock %}
 
         {% block autogrid_view_body %}
-            <tbody class="{{ attributes.html_classes.tbody|default('table-group-divider') }}">
+            <tbody class="{{ attributes.html_class.tbody|default('table-group-divider') }}">
             {% if view.fieldset.defined %}
                 <tr>
                     <td colspan="2" class="ps-0 pe-0">
