--- a/templates/bootstrap_5/grid/column_header.html.twig
+++ b/templates/bootstrap_5/grid/column_header.html.twig
@@ -1,5 +1,5 @@
 {% if field.permissions.grid %}
-    <th class="{{ field.attributes.column_header_class|default('align-middle') }}">
+    <th class="{{ field.attributes.column_html_class.header|default('align-middle') }}">
         {% if (field.canSort) %}
             {{ include(attributes.template.grid.column_header_sort|default(agTemplate('grid.column_header_sort'))) }}
         {% endif %}
